@@ -1,28 +1,28 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST iwl7265-ucode-0.10.13.23.tgz 42172 SHA256 2bbb3b6c481792b8e4128b0ae7aebd9ff580e34b9934b5cb471d5d0e5ed9b982 SHA512 8a1f632b07dffcf100766f19d92ebc76892621d83b29171902a1877407565997fca255600b0b5d17757e8c697be2eee803e4979785897c31399996e8f6c6b075 WHIRLPOOL e8560809d2b86ed30719e0e4a54057cfc350a0549add44b7d38be342f8bcacc69b841193c6012a69ef37eeeb9137a97f527d10b16547f33bca1e85d5b49ea400
-DIST iwl7265-ucode-0.8.24.22.tgz 42172 SHA256 1f4414d536f3d69c685fb6832bd4a25df2f9d58d8f25b4cb662961d468cefb73 SHA512 25341fcf9ba69fa8efae74dc15ec1ba6e34bfc75a78c720ad257ea7b11491c0f29b2ac4846c18f2298c458be943696fcdd4c84826e0110c29bbcdda7cf443149 WHIRLPOOL 468aec05cdebc8f2565314ce5890855c96415faa9456e3e257d63e1f18e02950d58f2eabb2a8812193e9124e667f763ffacc670a0ae0443265684d31c793abe2
-DIST iwl7265-ucode-0.9.228.25.tgz 42172 SHA256 64875b20e673d3f635a35cb483b759785353e3aa77de268cee51250eed04ae41 SHA512 07dc12bfb158edf64d70b7c3f304fe90ea3557cde501fb881a4f28a40d5599ea9a16c703f3aff72f3a1ffbcdd9768305a0e6f37e43e42b4123e387f4944c8cf5 WHIRLPOOL 0de088dff89f41e5a31ec58e871a396b4061b153c7a9a9dbd974a70147a8a6886b9d3fed348cc24ba9702f7e8c09ef66f434a8b4b0bc8e83028dbca9c124d984
-EBUILD iwl7265-ucode-0.10.13.23.ebuild 1504 SHA256 1deef5b112da2360d40ee41696b001ce12b5efcc1a950688d8c6ee92391c9a1e SHA512 fefa5df0aab3e49060ead4bf227b79f059a09d2cd53cfd6760a63501efac1ca7c8cdd4888bee8151e0fdd17a6462ebf9b07b0a97475eb770b88c91825f16f43c WHIRLPOOL 2ac94e41b25caca80b4cc91e556ea15f9e51ff733de1ae777c12e37e4afe4cff50ef70e9385d41df33e659a1b0a1f3ae3fe9d10f5ecc77e2d63906af570c666d
-EBUILD iwl7265-ucode-0.8.24.22.ebuild 1503 SHA256 233472571581b2a703ac294b905eb295f3dc97c8b0e9b3cb86003d4a80ea0fd4 SHA512 ccd54e4ca5797039b850f8ab40f9d783b9bdb2a33aeacf9ca1d5f8ffbd099d9585a04f186a77056dd0b4314b0655ac06e5892919b2b7e3f8597d0de9af1d67e6 WHIRLPOOL 0b09dbe38cf7160b4c8ca74da1cac6f137cf138a6f6ce539e527233c19acd07c6374d4823c6b2bef87d633e2d883c6711c9f9192dacd28ff137ebb47c25586e3
-EBUILD iwl7265-ucode-0.9.228.25.ebuild 1504 SHA256 84de9a5badea8ec644bb05907eef9e4eb060adfe8d11d397df072653bca3797b SHA512 6530284c6cf883d460656a10056d67b75de269e71dab1dc3ae23ffcbbd5a8f65691132a7b1bc229fb41f0d2df4ad92f841286f8f1108f8c7a352ab0288b9ec68 WHIRLPOOL 9bbf10eda90360431301731a215854afd709a8cb2a6ab39f0ad0e6ab1b68fb0fa990efaf2bde735e9f98db8f70537cbd2710677986f2cfbe6f52ad42b5e4772f
-MISC ChangeLog 579 SHA256 a13ca66d1c406d3a167350d085b3566d59c879d1a4691d7d75d81059194f8213 SHA512 35d21e1ebddcdc37be0d8bf94241b534aca281e17e0a34af871b6e7f098fc8c9cd7b5df68a44e3b5056b7b02b227d7c87fbcc427bdcf882d6a2093afde5e4881 WHIRLPOOL d50962467dbcdfbd83421cc2128042f0f5926f23a7718a6dbf41d23cb22255ab8f228cd89830be3efe18f38726541a637241b0b809dc215bd10347d47b7d9121
+DIST iwl7265-ucode-0.10.13.23.tgz 724292 SHA256 8788852e2a754008671017c4f33a1d389dfbb41ebefb8f2d04d6f6fd37eb8dcc SHA512 72989039b62f9cf33b8f7259b467c0e1bc0802033784ea29f23b0520d42651a05149b8ecf191a73190eadc5e1c117a661f5557b55c2736c080da8ee47b83dece WHIRLPOOL 173fe050d6bb88a6e22d70eae66486dcc48a1177ed632e8f4e7f4cf32e489b3932674c1e74cc9cd79d2ae45d2d893a87bd564180cb0208477e1de9217b7aa3ee
+DIST iwl7265-ucode-0.8.24.22.tgz 356862 SHA256 e94a1ec429c160f1ee6e1f55aef83fa68d38bc00fd21d9fe54c264ff506175df SHA512 59923a005cbe1127ccafd139625930aa21475e37c0a9e4b0f873ec687ef32c77e1cbb2a1b81b2b76731579818629f92b01076e4b7c9cc7dcf6782d364292e477 WHIRLPOOL 24010ef4d51b1282d7964579025826ba075074f020888551f015c1677cb8c17e38f053340285bdcf93617da8869e982f6a384a555f8537ae0035c28c20bc6fcd
+DIST iwl7265-ucode-0.9.228.25.tgz 365335 SHA256 e89bb8664a9a8c160438127d3c9f6ee2da6629973d2fa8f48b6d1b1da25a69b7 SHA512 759cc05f1c68a49827ce5629828e9e9fa36d72628407cd6c6be37aa86111b2360f10a387637ab4f4119400272a548b6b0a7d4aba67572bde89e6bda61c37e7b2 WHIRLPOOL bfd98e9237ad3cd0763ad1e16dfd32e72d7b9d89022596ed373e9cde0565e99d2f4eabffbeef95776729f66c8088a1ed2865b038187111b3c880a837dd140176
+EBUILD iwl7265-ucode-0.10.13.23.ebuild 1477 SHA256 bed7a26b07580df8e4fa657c9ab7af9e06596b5f3be8de61f9145fe88ae43d7a SHA512 e2491d49f361316b7514ea827a7e5bda42a878e95fb8014afbb85dd8edb81030aa3e9a556be62e6311c6d0395984a7cb5a4d00f4ffdabf869957c0c68102baa1 WHIRLPOOL 27a52a1e4cf06c66155e0855ff6af656172436f39c593ee0181a9414772410a035fb8a8493907380486b02da6e2687c3cf62c271e27ab61cad83d8590bc0cd56
+EBUILD iwl7265-ucode-0.8.24.22.ebuild 1476 SHA256 5a1658f07ee6f47e4cc58db81e16da046d68806366d419c5d66a91e61c33a8d8 SHA512 bd0ccc42da75306d4eb0925e67419df7c0915d9ab88d349f9a79621d554fc4c11d2c6ef36cc4b203e73dc56361cf3314c19d32569c38fe65f51663f9d8f52497 WHIRLPOOL c26449985e76c71e0badfd2408df88ea765957c8c4de4ef4da12b995b0419e2934249363657e5378c0ea9bf0d8457a11269610ae0eb11f0b42b464a30f9f6aa7
+EBUILD iwl7265-ucode-0.9.228.25.ebuild 1477 SHA256 3809650afbdda8e2b1c7c9bbf1d5fa26c8e311c6f729144c4c2057adb484c360 SHA512 4cabd6055d5c887b2e0c1e41fbbb023585cbc496ef8f152b0b4556455cdada54f6774ed446194d651217a2aa608c5ad3d49685d7b002aff3e795949f27d281f3 WHIRLPOOL a6f3b62e87327cf2c9ae28304ba97b050d47dea1f07dbd39cbeee350d45771db7d0a42afe725eaf6a7b56ecbce323d229fb7d7ecfd49e362fcb95a4c1e50f55a
+MISC ChangeLog 770 SHA256 96ea7b56258cbe4e2681dd9f1ab325210c5f05f5de07e84da4c77742f9638981 SHA512 732b2449536af4f294b4d2100492191462053258a529de9a972a5879da581bf1eddcf03c57eb46dfdd1a504ef6af444f20d5986e1b2deb26f2641711d0ff5581 WHIRLPOOL d583a4d5497b9b6f566ee14526eee63d47b38264577b1ac2f63c1bfebcd8686238603810975d05503f173e5377e8c10366f5b00c331d83b9a8ca153a2e7b3bad
 MISC metadata.xml 305 SHA256 3777d1c54b70901686b36a64478e917d741edfda080f7653264fdc959ca3e531 SHA512 dc0a8b07c3e9bff050be74b9a08f63adc9a595f6a1f1d45fe63225d92a544c6c0db78ab1c55dfe4ad4e4faf5378f1eddb10514f3985395722091c133ad1cb091 WHIRLPOOL dcbbd8bd1b26d8d8f45170a3c57b7ed8fb491941256ba93e8b3af71ff750759ceb82564f6cddaf14b12e10844dc7dc30621f913bb678582d0e27c15d9858e953
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJU6VYFAAoJEGSje+quGaToDQUQALR827ZgF7blDgjMftIQ7jyN
-vPYIvDf5IsJQYFcnYCv8T5nZEYSwp+pHWztBf4+2dYR2nwdhMnT5ueEYPJG/levf
-X/AKbEtYnBXIp/RxqnmYjCtbYR25Xjs7VjMQnycM/Q3ncNz0dX+Ind8zvlA215E0
-hGg0ca29bSZIP5bKKv9vK0mk/U15E1CknXjwCdXmHmqpSZQX2N/PpXqjRKKQU/yd
-fq7nluiBE33sbYKZ8yuVH3V64cvfj5ls03/83FMDd/vtiuZQtfCYZl5C2z09iqUM
-rgxaMfspIA4GgGr5LG6pNTkU8Cd7tJByks9HVq9vug++aA1wNum5Bw/9m4QeBmOT
-aHF30U/0myFBFmrE3A6jpJzLtv65sVggswlZu+G0gNGuboO7682JrvlpFEn/6Y3Z
-3/UZOgbYYHLwKMogg5Q1ovlF5oS22wVMIkeCbRjsh0ad1xstHFgXYQtLgXJwbpT2
-50qKJ0OkHa4zL/qzf0KiMs+sXdTQY8LSPvbaefrl0NqKZaS4CfhgjLH0h53CnPuO
-nlSuds9qyS5ZNb+j11c6SSHMfKovPR2Xp9PBARQifKZjtHPyh/cA8+YdPDltqw8P
-l/+9VRXx2Fa46KPieZm4snxpQpSb9MPQjeje6VUJDZ+JcnuPHlFp2SyHVi3iUspm
-+eMcvQNRFnQKQR6pRrsH
-=5NEQ
+iQIcBAEBCAAGBQJU6qADAAoJEGSje+quGaTow9UP/08ydOstDyILI3T8EYeK2DNz
+CSdeQgABEMSEbMrpACCC9m+bZuA92V+O53kSJ8kzeOl6qweav+u7w6VHstTnQC3D
+5ih28S30EYxrHu37LTdnSTIgK3QS5uesEnCTezyNh3INwx+zUi7DDPzOEWqxyj//
+AbeYUg2VHSjpAIKymXIaRv5VdPyZQeyDmkf3/0/ppNslNCXVKJ3jGCJl5MHmbe2u
+oyzY8qoectDdUH4MfNOD6+wRvNd5dwnVgHXG4KCPeKTLsN2330sIi9VaoqExLKiE
+8jiBZskoWvld8qUSOm2RE2+KcDGaewzs89jGqa8xeNqxbnJfG9hiQ4pOnScoqg4U
+fqg/uiMg5lP3YkilnA7dwuRUnScRzIXHvjk2J/LtRtoK7BI+09TsIxwZe38t/hjw
+Q1bxnxSV29WnTqiVBoFlT3LH2sPLhuk/vayjBi1BI+xw6A20MorQsVgZh6kIdZ4k
+wxqtrJppNQw/UusI2FjnGLabE2HZ/MLg5DMELjRmP720QhYGcyYt36vJurmZ1CZH
+XjfwT9G2cYvVyfVRTUBv/4qfkSz29w00T4kxoISWQdEt9Z5piMbfNLNz5xih+cn1
+V/5KU11YNFRVIK8WPGVq3rl9AD80+SgpYNskf0q5yBFDa23/330P+hKky/uDCRa4
+mRyvEJx7OlX2QQ54ckYF
+=j/Pg
 -----END PGP SIGNATURE-----
