@@ -1,6 +1,11 @@
 # ChangeLog for sys-firmware/iwl7265-ucode
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-firmware/iwl7265-ucode/ChangeLog,v 1.1 2015/02/22 04:06:56 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-firmware/iwl7265-ucode/ChangeLog,v 1.2 2015/02/23 03:34:53 prometheanfire Exp $
+
+  23 Feb 2015; Matthew Thode <prometheanfire@gentoo.org>
+  iwl7265-ucode-0.10.13.23.ebuild, iwl7265-ucode-0.8.24.22.ebuild,
+  iwl7265-ucode-0.9.228.25.ebuild:
+  fixing manifests and src_uri
 
 *iwl7265-ucode-0.8.24.22 (22 Feb 2015)
 *iwl7265-ucode-0.10.13.23 (22 Feb 2015)
